[NewFeat][Q3] add new API challenges
