# docs/swagger.yaml
@@ -9,6 +9,30 @@ definitions:
     - RoomStatusAvailable
     - RoomStatusUnavailable
     - RoomStatusMaintenance
+  models.ChallengeRequest:
+    properties:
+      playerId:
+        type: string
+    type: object
+  models.CreateChallengeGameRequest:
+    properties:
+      addWinProbability:
+        type: number
+      challengeCost:
+        type: number
+      challengeTimeCostSec:
+        type: integer
+      challengeTimeDurationSec:
+        type: integer
+      winProbability:
+        type: number
+    required:
+    - addWinProbability
+    - challengeCost
+    - challengeTimeCostSec
+    - challengeTimeDurationSec
+    - winProbability
+    type: object
   models.LevelRequest:
     properties:
       name:
@@ -16,10 +40,15 @@ definitions:
     type: object
   models.PlayerRequest:
     properties:
+      balance:
+        type: number
       levelId:
         type: string
       name:
         type: string
+    required:
+    - levelId
+    - name
     type: object
   models.ReservationRequest:
     properties:
@@ -51,9 +80,190 @@ definitions:
       status:
         $ref: '#/definitions/enums.RoomStatus'
     type: object
+  models.UpdateChallengeGameRequest:
+    properties:
+      addWinProbability:
+        type: number
+      challengeCost:
+        type: number
+      challengeTimeCostSec:
+        type: integer
+      challengeTimeDurationSec:
+        type: integer
+      winProbability:
+        type: number
+    type: object
 info:
   contact: {}
 paths:
+  /challengegames:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of all challenge games
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: List all challenge games
+      tags:
+      - challengegames
+    post:
+      consumes:
+      - application/json
+      description: Create a new challenge game with the given details
+      parameters:
+      - description: Create challenge game
+        in: body
+        name: challengegame
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateChallengeGameRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Create a new challenge game
+      tags:
+      - challengegames
+  /challengegames/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a specific challenge game
+      parameters:
+      - description: Challenge Game ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Delete a challenge game
+      tags:
+      - challengegames
+    get:
+      consumes:
+      - application/json
+      description: Get details of a specific challenge game
+      parameters:
+      - description: Challenge Game ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Get a challenge game by ID
+      tags:
+      - challengegames
+    put:
+      consumes:
+      - application/json
+      description: Update details of a specific challenge game
+      parameters:
+      - description: Challenge Game ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update challenge game
+        in: body
+        name: challengegame
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateChallengeGameRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Update a challenge game
+      tags:
+      - challengegames
+  /challenges:
+    post:
+      consumes:
+      - application/json
+      description: Player joins a challenge with a fixed payment amount
+      parameters:
+      - description: Join challenge
+        in: body
+        name: challenge
+        required: true
+        schema:
+          $ref: '#/definitions/models.ChallengeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Join a challenge
+      tags:
+      - challenges
+  /challenges/results:
+    get:
+      consumes:
+      - application/json
+      description: Get the most recent challenge result for a player
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Get last challenge result
+      tags:
+      - challenges
   /levels:
     get:
       consumes:
